<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.android.nunu.ui.login.LoginViewModel" />

    </data>


    <RelativeLayout
        android:id="@+id/activityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="bottom"
            android:orientation="vertical">





        <ProgressBar
            android:id="@+id/address_looking_up"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:indeterminate="true"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.INVISIBLE}"
            android:scaleY="2" />


        <LinearLayout
            android:id="@+id/logoLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:gravity="bottom|start"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:animateLayoutChanges="true"
                android:gravity="bottom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_app_logo"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="2"
                    android:adjustViewBounds="true"
                    android:animateLayoutChanges="true" />


            </LinearLayout>


        </LinearLayout>





        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_below="@+id/title"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="80dp"
                    app:cardBackgroundColor="#f5f5f5"
                    app:cardCornerRadius="7dp"
                    app:cardElevation="22dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:textColorHint="@color/gray">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/transparent"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:hint="@string/username"
                                android:text="iamnaran"
                                android:inputType="textEmailAddress"
                                android:maxLength="50"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/password"
                            android:textColorHint="@color/gray"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/transparent"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:text="password"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btnServerLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            android:onClick="@{() -> viewModel.onServerLoginClick()}"
                            android:padding="10dp"
                            android:background="@drawable/background_fill_primary_corner"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>


        </ScrollView>



        </LinearLayout>


    </RelativeLayout>


</layout>